--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_staggered_grid_view:
+  toast: ^0.1.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
