--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view:
+  flutter_staggered_grid_view: ^0.6.2
   toast: ^0.1.3
   event_bus: 1.1.0
-  provider:
+  provider: ^6.0.5
 
 
 
