--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -23,10 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.6.2
-  toast: ^0.1.3
+  flutter_staggered_grid_view: 0.6.2
+  toast: 0.1.3
   event_bus: 1.1.0
-  provider: ^6.0.5
+  provider: 6.0.5
+  uuid: 3.0.7 #flutter侧的UUID生成器
+  path: 1.8.2 #Dart 路径操作库
+  jiffy: 4.1.0 #Flutter的日期时间库
+  scrollable_positioned_list: 0.2.3 #列表工具库，可以指定滚动位置
+  badges: 2.0.2 #提示组件库(例：未读小红点)
+  pull_to_refresh: 2.0.0 #下拉刷新库
+  gzx_dropdown_menu: 3.1.0 #下拉筛选菜单
+  equatable: 2.0.3 #对象比较库
+  bot_toast: 4.0.1 #Toast库
+  cached_network_image: 3.2.0 #加载并缓存图像库
+  image_picker: 0.8.4 #图片选择器
 
 
 
