--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   intl_utils: ^2.8.2 # 多语言
   flutter_lints: ^2.0.1 # 代码约束
   # ----- UI 库 -----------
+  flutter_screenutil: ^5.7.0 # 屏幕适配
   flutter_staggered_grid_view: 0.6.2 # 瀑布流
   image_picker: 0.8.4 #图片选择器
-  bot_toast: 4.0.1 #Toast库
-  toast: 0.1.3 # toast
+  fluttertoast: ^8.2.1 # toast
   jiffy: 4.1.0 #Flutter的日期时间库
   scrollable_positioned_list: 0.2.3 #列表工具库，可以指定滚动位置
   badges: 2.0.2 #提示组件库(例：未读小红点)
