--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   shared_preferences: ^2.1.0 # 本地存储
   path_provider: ^2.0.14 # 本地路径查询，实现清除缓存功能
   permission_handler: ^10.2.0 # 权限申请
+  flutter_boost: # flutter和原生混合
+    git:
+      url: 'https://github.com/alibaba/flutter_boost.git'
+      ref: '4.0.2'
+  go_router: ^7.0.1 # 路由导航
 
 
 
@@ -46,19 +51,12 @@ dependencies:
   image_picker: ^0.8.7+4 #图片选择器
   fluttertoast: ^8.2.1 # toast
   flutter_easyloading: ^3.0.5 # 网络加载loading
-#  jiffy: ^6.1.0 #Flutter的日期时间库
   scrollable_positioned_list: ^0.3.5 #列表工具库，可以指定滚动位置
   badges: ^3.1.1 #提示组件库(例：未读小红点)
   pull_to_refresh: ^2.0.0 #下拉刷新库
   gzx_dropdown_menu: ^3.1.0 #下拉筛选菜单
   cached_network_image: ^3.2.3 #加载并缓存图像库
   flutter_inappwebview: ^5.7.2+3 # 官方web
-
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
 
 dev_dependencies:
