feat：封装dio网络请求

--- a/flutter_app_demo/pubspec.yaml
+++ b/flutter_app_demo/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
       url: 'https://github.com/alibaba/flutter_boost.git'
       ref: '4.0.2'
   go_router: ^7.0.1 # 路由导航
+  rxdart: ^0.27.7
 
 
 
